Fix the issue of virtual keyobard overlapping input method candidates area.
This CL fixes most cases of the issue, but not completely.
When input method produces many candidates with many characters, right part of candidate run off the edge of the screen. In order to handle such cases, we need to show candidates more cleverly.

BUG=none
TEST=Manually on the machine.

Review URL: http://codereview.chromium.org/7564004

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@95234 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: f5cfdb6113fc9d0fca2edc75423a8919f24fb2c4

--- a/chrome/browser/resources/keyboard/main.css
+++ b/chrome/browser/resources/keyboard/main.css
@@ -60,6 +60,7 @@ div.row > div {
   font-family: sans-serif;
   margin: 0;
   text-align: center;
+  white-space: nowrap;
 }
 
 .panel {
